--- a/Web/index.html
+++ b/Web/index.html
@@ -596,7 +596,13 @@
         <div class="options" id="options">
             <p>Version</p>
             <select id="Version" class="dropdown">
-                <option value="r1.8">Use Latest Version</option>
+                <option value="r1.20">Use Latest Version</option>
+                <option value="r1.20">Release 1.20.4</option>
+                <option value="r1.19">Release 1.19</option>
+                <option value="r1.18">Release 1.18</option>
+                <option value="r1.15">Release 1.15</option>
+                <option value="r1.14">Release 1.14</option>
+                <option value="r1.12">Release 1.12</option>
                 <option value="r1.8">Release 1.8.8</option>
                 <option value="r1.5">Release 1.5.2</option>
                 <option value="b1.3">Beta 1.3</option>
